--- a/ranch/redhat/citool-config/summary-map.yaml
+++ b/ranch/redhat/citool-config/summary-map.yaml
@@ -39,3 +39,13 @@
     and "Multiple provision phases not supported, refusing to continue." in ERROR_MESSAGE
   reason: >-
     Multiple provision phases not supported in this pipeline. See https://docs.testing-farm.io/Testing%20Farm/0.1/test-request.html#multihost-testing for information on how to run the multihost pipeline.'
+
+# TFT-2202 - treat provisioning errors as test failures
+- rule: >
+    EXISTS('ERROR_MESSAGE')
+    and ERROR_MESSAGE
+    and "Artemis resource ended in 'error' state" in ERROR_MESSAGE
+    and EXISTS('TESTING_FARM_FAILED_IF_PROVISION_ERROR')
+    and TESTING_FARM_FAILED_IF_PROVISION_ERROR
+  reason: >-
+    Provisioning of test resources failed. This is considered as a test failure, because `settings.pipeline.provision-error-failed-result` was set.
