--- a/tests/worker/public/tmt-x86_64-aarch64-koji-build.yaml
+++ b/tests/worker/public/tmt-x86_64-aarch64-koji-build.yaml
@@ -9,8 +9,8 @@ marks:
   - pipeline
 
 variables:
-  REQUEST_ID: 91d9f27c-56ad-434f-a2b9-362b44ada92d
-  COMPOSE: Fedora-38
+  REQUEST_ID: 56b86bbc-7d6b-4754-bb73-aa48686f48e7
+  COMPOSE: Fedora-39
   ARCH: x86_64
   RESULT: PASSED
   GIT_CLONE_URL: https://gitlab.com/testing-farm/tests
@@ -22,7 +22,8 @@ checks:
   literal-patterns:
     - "[{{ COMPOSE }}:{{ ARCH }}:{{ PLAN }}] installing the artifact"
     - "[{{ COMPOSE }}:aarch64:{{ PLAN }}] installing the artifact"
-    - "[artemis] [{{ artemis_guestname_pattern }}] Download task id vim-9.0.1677-2.fc38"
+    - "[artemis] [{{ artemis_guestname_pattern }}] Download task id vim-9.0.2153-1.fc39"
+    - "[artemis] [{{ artemis_guestname_pattern }}] Download task id tmt-1.29.0-1.fc39"
     - "[artemis] [{{ artemis_guestname_pattern }}] Get package list"
     - "[artemis] [{{ artemis_guestname_pattern }}] Reinstall packages"
     - "[artemis] [{{ artemis_guestname_pattern }}] Install packages"
@@ -79,5 +80,7 @@ checks:
           - tmt
 
   literal-patterns[citool-debug.txt]:
-    - "koji download-build --debuginfo --task-id --arch noarch --arch {{ ARCH }} --arch src vim-9.0.1677-2.fc38 || koji download-task --arch noarch --arch {{ ARCH }} --arch src vim-9.0.1677-2.fc38"
-    - "koji download-build --debuginfo --task-id --arch noarch --arch aarch64 --arch src vim-9.0.1677-2.fc38 || koji download-task --arch noarch --arch aarch64 --arch src vim-9.0.1677-2.fc38"
+    - "koji download-build --debuginfo --task-id --arch noarch --arch {{ ARCH }} --arch src vim-9.0.2153-1.fc39 || koji download-task --arch noarch --arch {{ ARCH }} --arch src vim-9.0.2153-1.fc39"
+    - "koji download-build --debuginfo --task-id --arch noarch --arch {{ ARCH }} --arch src tmt-1.29.0-1.fc39 || koji download-task --arch noarch --arch {{ ARCH }} --arch src tmt-1.29.0-1.fc39"
+    - "koji download-build --debuginfo --task-id --arch noarch --arch aarch64 --arch src vim-9.0.2153-1.fc39 || koji download-task --arch noarch --arch aarch64 --arch src vim-9.0.2153-1.fc39"
+    - "koji download-build --debuginfo --task-id --arch noarch --arch aarch64 --arch src tmt-1.29.0-1.fc39 || koji download-task --arch noarch --arch aarch64 --arch src tmt-1.29.0-1.fc39"
