--- a/ansible/roles/nomad/tasks/install.yml
+++ b/ansible/roles/nomad/tasks/install.yml
@@ -15,6 +15,8 @@
 
 - name: Download Nomad
   command: "curl -Lo {{ download.path }}/{{ nomad_pkg }} {{ nomad_zip_url }}"
+  tags:
+    - skip_ansible_lint
 
 - name: Unarchive Nomad
   unarchive:
