--- a/tests/worker/public/tmt-container-failure.yaml
+++ b/tests/worker/public/tmt-container-failure.yaml
@@ -36,7 +36,7 @@ checks:
         <properties>
          <property name="baseosci.result" value="failed"/>
         </properties>
-        <testcase name="/testing-farm/failure" result="failed">
+        <testcase name="/testing-farm/failure" result="failed" time="{{ '\d+' }}">
          <properties>
           <property name="baseosci.arch" value="{{ ARCH }}"/>
           <property name="baseosci.connectable_host" value="localhost"/>
@@ -75,7 +75,7 @@ checks:
       <?xml version="1.0" encoding="UTF-8"?>
       <testsuites>
        <testsuite name="{{ PLAN }}" tests="1" failures="1" errors="0" skipped="0">
-        <testcase name="/testing-farm/failure" classname="tests">
+        <testcase name="/testing-farm/failure" classname="tests" time="{{ '\d+' }}">
          <system-out>NAME=&amp;quot;Fedora Linux&amp;quot;
       VERSION=&amp;quot;39 (Container Image)&amp;quot;
       ID=fedora
