--- a/tests/worker/public/tmt-container-x86_64-merge-sha.yaml
+++ b/tests/worker/public/tmt-container-x86_64-merge-sha.yaml
@@ -36,7 +36,7 @@ checks:
         <properties>
          <property name="baseosci.result" value="passed"/>
         </properties>
-        <testcase name="/testing-farm/script" result="passed">
+        <testcase name="/testing-farm/script" result="passed" time="{{ '\d+' }}">
          <properties>
           <property name="baseosci.arch" value="{{ ARCH }}"/>
           <property name="baseosci.connectable_host" value="localhost"/>
@@ -74,7 +74,7 @@ checks:
       <?xml version="1.0" encoding="UTF-8"?>
       <testsuites>
        <testsuite name="{{ PLAN }}" tests="1" failures="0" errors="0" skipped="0">
-        <testcase name="/testing-farm/script" classname="tests">
+        <testcase name="/testing-farm/script" classname="tests" time="{{ '\d+' }}">
          <system-out>merge_sha branch got merged
       </system-out>
         </testcase>
