--- a/tests/worker/public/tmt-container.yaml
+++ b/tests/worker/public/tmt-container.yaml
@@ -33,7 +33,7 @@ checks:
         <properties>
          <property name="baseosci.result" value="passed"/>
         </properties>
-        <testcase name="/testing-farm/script" result="passed">
+        <testcase name="/testing-farm/script" result="passed" time="{{ '\d+' }}">
          <properties>
           <property name="baseosci.arch" value="{{ ARCH }}"/>
           <property name="baseosci.connectable_host" value="localhost"/>
@@ -71,7 +71,7 @@ checks:
       <?xml version="1.0" encoding="UTF-8"?>
       <testsuites>
        <testsuite name="{{ PLAN }}" tests="1" failures="0" errors="0" skipped="0">
-        <testcase name="/testing-farm/script" classname="tests">
+        <testcase name="/testing-farm/script" classname="tests" time="{{ '\d+' }}">
          <system-out>NAME=&amp;quot;Fedora Linux&amp;quot;
       VERSION=&amp;quot;39 (Container Image)&amp;quot;
       ID=fedora
