--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
@@ -1,7 +1,11 @@
-- name: Enable CRB repository
+- name: Enable CRB repository (rhel)
   command: "dnf config-manager --enable rhel-CRB"
   when:
     - 'ansible_distribution == "RedHat"'
     - 'ansible_distribution_major_version >= "8"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
   ignore_errors: true
+
+- name: Enable CRB repository (centos)
+  command: "dnf config-manager --enable crb"
+  when: "IMAGE_NAME|lower|regex_search('centos.stream.9')"
