source-destination-map: add console log to in progress archiving

--- a/ranch/public/citool-config/source-destination-map.yaml
+++ b/ranch/public/citool-config/source-destination-map.yaml
@@ -25,6 +25,8 @@ progress:
   - source: "pipeline.log"
     destination: pipeline.log
 
+  - source: "work-*/console-*"
+
 destroy:
   - source: "./*"
     permissions: "777"
