Finish refactoring for external developers
We want this repository to support two roles:

1. external developers wanting to develop Testing Farm locally

2. Testing Farm developers having access to infrastructure

To accomplish this:

* identify maintainers by setting `.vault_pass` in the repository
* show make targets related only to the use cases
* add maintainers specific pre-commit configuration
* add `install/pre-commit` target to install correct hooks
* make sure `setup/environment.sh` recognizes the role

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -8,12 +8,12 @@ export TOOLS_PATH="$DIRENV_PATH/bin"
 #
 # helper
 #
-IS_MAINTAINER="test -e $PROJECT_ROOT/.vault_pass"
+export IS_MAINTAINER="$(test -e $PROJECT_ROOT/.vault_pass && echo yes)"
 
 #
 # required
 #
-if ! $IS_MAINTAINER; then
+if test -z "$IS_MAINTAINER"; then
     echo -e "\e[33m💡 Create '.vault_pass' in project root '$PROJECT_ROOT' to activate Testing Farm maintainer access."
 fi
 
@@ -35,7 +35,7 @@ PATH_add "$(poetry run bash -c 'echo $VIRTUAL_ENV')/bin"
 #
 # Configuration below is only for maintainers
 #
-$IS_MAINTAINER || return
+test -z "$IS_MAINTAINER" && return
 
 #
 # export AWS credentials
