--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
@@ -13,5 +13,5 @@
 
   when:
     - 'ansible_distribution == "RedHat"'
-    - 'ansible_distribution_major_version >= "8"'
+    - 'ansible_distribution_major_version | int >= 8'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
