--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
@@ -2,7 +2,7 @@
   command: "dnf config-manager --enable rhel-CRB"
   when:
     - 'ansible_distribution == "RedHat"'
-    - 'ansible_distribution_major_version >= "8"'
+    - 'ansible_distribution_major_version | int >= 8'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
   ignore_errors: true
 
