--- a/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yaml
+++ b/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/enable-powertools.yaml
@@ -8,6 +8,6 @@
 
   when:
     - 'ansible_distribution == "CentOS"'
-    - 'ansible_distribution_major_version >= "8"'
+    - 'ansible_distribution_major_version | int >= 8'
     - "not IMAGE_NAME|lower|regex_search('centos.stream.9')"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
