--- a/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/terragrunt/environments/staging/worker/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -35,7 +35,7 @@
 
   when:
     - 'ansible_distribution == "RedHat"'
-    - 'ansible_distribution_major_version <= "7"'
+    - 'ansible_distribution_major_version | int <= 7'
 
 - block:
     - name: Add RCM Repository for RHEL 8
