ranch/redhat/guest-setup: support composer-api composes
For now, we will not run anything on these, we might need to fine tune
later.

Used for OpenSCAP testing prototype for @ljavorsk.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yaml
@@ -13,4 +13,6 @@
     baseurl: http://beaker.engineering.redhat.com/rpms/
     gpgcheck: false
     enabled: true
-  when: '"auto-osbuild" not in IMAGE_NAME|lower'
+  when:
+    - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"composer-api" not in IMAGE_NAME|lower'
