--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/install-koji-brew.yaml
@@ -34,6 +34,7 @@
        ansible_distribution == "Rocky"'
     - 'ansible_distribution_major_version | int <= 7'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"composer-api" not in IMAGE_NAME|lower'
 
 - block:
     - name: Add RCM Repository for RHEL8+
@@ -60,3 +61,4 @@
        ansible_distribution == "Rocky"'
     - 'ansible_distribution_major_version | int >= 8'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"composer-api" not in IMAGE_NAME|lower'
