--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -112,6 +112,7 @@
     - IMAGE_NAME is defined
     - ansible_distribution == "RedHat"
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"composer-api" not in IMAGE_NAME|lower'
 
   #
   # block: end
@@ -128,3 +129,4 @@
   when:
     - IMAGE_NAME is undefined
     - '"auto-osbuild" in IMAGE_NAME|lower'
+    - '"composer-api" in IMAGE_NAME|lower'
