--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-client-repo-unavailable.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-client-repo-unavailable.yaml
@@ -29,6 +29,7 @@
   when:
     - beaker_client_repo_file_status.stat.exists
     - '"auto-osbuild" not in IMAGE_NAME|lower'
+    - '"composer-api" not in IMAGE_NAME|lower'
 
 #
 # Be verbose about the fact we skipped the workaround
@@ -38,3 +39,4 @@
   when:
     - not beaker_client_repo_file_status.stat.exists
     - '"auto-osbuild" in IMAGE_NAME|lower'
+    - '"composer-api" in IMAGE_NAME|lower'
