--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-centos-8.yaml
@@ -34,3 +34,4 @@
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     # Do not run on CentOS-8-Stream
     - not 'stream' in IMAGE_NAME|lower
+    - '"composer-api" not in IMAGE_NAME|lower'
