--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-extras.yaml
@@ -14,6 +14,7 @@
     - 'ansible_distribution_major_version == "7"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"updates" in IMAGE_NAME|lower'
+    - '"composer-api" not in IMAGE_NAME|lower'
 
 - block:
   - name: Add RHEL7 nightly Extras repository
@@ -30,3 +31,4 @@
     - 'ansible_distribution_major_version == "7"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"updates" not in IMAGE_NAME|lower'
+    - '"composer-api" not in IMAGE_NAME|lower'
