Prepare for infrastructure container
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.envrc
+++ b/.envrc
@@ -1,8 +1,13 @@
+# Used only in CI to load the INSTALL_PATH.
+# See container/Containerfile for details.
+dotenv_if_exists /.env
+
 #
 # global vars
 #
-export PROJECT_ROOT=$(pwd)
-export DIRENV_PATH="$PROJECT_ROOT/.direnv"
+export PROJECT_ROOT="$PWD"
+export INSTALL_PATH="${INSTALL_PATH:-$PROJECT_ROOT}"
+export DIRENV_PATH="$INSTALL_PATH/.direnv"
 export TOOLS_PATH="$DIRENV_PATH/bin"
 
 #
