Support HARDENED-* composesfor OpenSCAP pre-hardened images
Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-beaker-tasks.yaml
@@ -16,3 +16,4 @@
   when:
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
+    - '"hardened" not in IMAGE_NAME|lower'
