--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-repos.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-beaker-repos.yaml
@@ -37,3 +37,4 @@
     - 'ansible_distribution == "RedHat"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
+    - '"hardened" not in IMAGE_NAME|lower'
