--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-buildroot.yaml
@@ -16,3 +16,4 @@
     - 'ansible_distribution_major_version | int >= 8'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
+    - '"hardened" not in IMAGE_NAME|lower'
