--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/enable-crb.yaml
@@ -5,6 +5,7 @@
     - 'ansible_distribution_major_version | int >= 8'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
+    - '"hardened" not in IMAGE_NAME|lower'
   ignore_errors: true
 
 - name: Enable CRB repository (centos)
