--- a/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-disable-qa-tools.yaml
+++ b/ranch/redhat/citool-config/guest-setup/pre-artifact-installation/workaround-disable-qa-tools.yaml
@@ -9,5 +9,6 @@
     - 'ansible_distribution_version == "8.1"'
     - '"auto-osbuild" not in IMAGE_NAME|lower'
     - '"composer-api" not in IMAGE_NAME|lower'
+    - '"hardened" not in IMAGE_NAME|lower'
   # TODO: this will not work with Beaker, needs more <3
   ignore_errors: true
