--- a/tests/worker/public/tmt-container-checks.yaml
+++ b/tests/worker/public/tmt-container-checks.yaml
@@ -54,18 +54,18 @@ checks:
           <property name="arch" value="{{ ARCH }}"/>
           <property name="snapshots" value="False"/>
          </testing-environment>
-         <checks checks="3" errors="1" failures="0">
-          <check name="dmesg" result="pass" event="before-test">
+         <checks checks="3" errors="3" failures="0">
+          <check name="dmesg" result="error" event="before-test">
            <logs>
             <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1/checks/dmesg-before-test.txt" name="dmesg-before-test.txt"/>
            </logs>
           </check>
           <check name="avc" result="error" event="after-test">
            <logs>
-            <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1/checks/avc-after-test.txt" name="avc-after-test.txt"/>
+            <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1/checks/avc.txt" name="avc.txt"/>
            </logs>
           </check>
-          <check name="dmesg" result="pass" event="after-test">
+          <check name="dmesg" result="error" event="after-test">
            <logs>
             <log href="https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}/work-sanity{{ '.+' }}{{ PLAN }}/execute/data/guest/default-0/testing-farm/script-1/checks/dmesg-after-test.txt" name="dmesg-after-test.txt"/>
            </logs>
