--- a/tests/worker/public/tmt-empty-plan-x86_64.yaml
+++ b/tests/worker/public/tmt-empty-plan-x86_64.yaml
@@ -25,4 +25,4 @@ checks:
     - "[git] <RemoteGitRepository(clone_url={{ GIT_CLONE_URL }}, branch=not specified, ref={{ GIT_REF }})>"
     - "[coldstore] For the pipeline artifacts, see https://artifacts.dev.testing-farm.io/{{ REQUEST_ID }}"
     - "[{{ COMPOSE }}:{{ ARCH }}] looking for plans"
-    - "[test-scheduler-testing-farm] Exception raised: No plans to execute after removing empty plans. Cowardly refusing to continue."
+    - "[test-scheduler-testing-farm] Exception raised: No plans to execute after applying filters and removing empty plans. Cowardly refusing to continue."
