tests: fix tmt-container-secrets.yaml

--- a/tests/worker/public/tmt-container-secrets.yaml
+++ b/tests/worker/public/tmt-container-secrets.yaml
@@ -19,6 +19,8 @@ variables:
 checks:
   literal-strings:
     - "[worker_0] [stderr] [None:x86_64:/testing-farm/sanity]             00:00:00 pass /testing-farm/script (on default-0) [1/1]"
+
+  literal-strings[citool-debug.txt]:
     - "[hide-secrets] Hiding secrets from all files under '.' path"
 
   literal-patterns:
