tests: add test_name to tmt-container-secrets.yaml

--- a/tests/worker/public/tmt-container-secrets.yaml
+++ b/tests/worker/public/tmt-container-secrets.yaml
@@ -46,6 +46,7 @@ checks:
           "plan_filter": "<not applicable>",
           "ref": "main",
           "test_filter": "<not applicable>",
+          "test_name": "<not applicable>",
           "type": "fmf",
           "url": "{{ GIT_CLONE_URL }}",
           "webhook_url": "<no webhook specified>"
